--- a/views/includes/functions.ejs
+++ b/views/includes/functions.ejs
@@ -40,6 +40,7 @@
 							
 					html += '<span class="' + className + '" onclick="toggleLikePageProfile(this);" data-id="' + x + '">';
 					html += '<i class="ti-thumb-up"></i>';
+					html += '<ins>' + comment.likers2.length + '</ins>';
 					
 					html += '</span>';
 					html += '</li>';
@@ -87,6 +88,7 @@
 							
 					html += '<span class="' + className + '" onclick="toggleLikeMovieAvaliacao(this);" data-id="' + x + '">';
 					html += '<i class="ti-thumb-up"></i>';
+					html += '<ins>' + comment.likers2.length + '</ins>';
 					
 					html += '</span>';
 					html += '</li>';
@@ -136,6 +138,7 @@
 							
 					html += '<span class="' + className + '" onclick="toggleLikeSerieAvaliacao(this);" data-id="' + x + '">';
 					html += '<i class="ti-thumb-up"></i>';
+					html += '<ins>' + comment.likers2.length + '</ins>';
 					
 					html += '</span>';
 					html += '</li>';
